fix dimension on small device

--- a/src/js/components/styles/card.scss
+++ b/src/js/components/styles/card.scss
@@ -5,6 +5,7 @@
   float: left;
   margin: 0 auto;
   position: relative;
+  width: 100%;
 
   @media screen and (min-width: $breakpoint-medium) {
     margin: 14px 0 16px 14px;
