--- a/src/js/components/styles/form.scss
+++ b/src/js/components/styles/form.scss
@@ -21,7 +21,6 @@ $form-focus-color: #444 !default;
     margin: 0 auto;
     width: 96%;
     max-width: 640px;
-    min-width: 360px;
 
     @media screen and (min-width: $breakpoint-medium) {
       margin: 0;
